panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_error_pp_number_not_addition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_error_pp_number_not_addition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_error_pp_number_not_addition.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration name~2 `int` 12)
         (return (add 0x1e (name name~2 `int`))))))

----- stderr -----
